- Fixed color problem with browser object - Enhanced browserobject functionality - Added browser-driven MainMenu

--- a/UI/MainPage.html
+++ b/UI/MainPage.html
@@ -21,6 +21,7 @@
     </style>
 </head>
 <body>
+    <img src="fuhrer.jpg" />
 	<div id="test">Hallo Welt <input type="text" /></div>
 </body>
 </html>
